--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,20 @@
+/* ------------------------------------------------------------------
+                           COLOR GUIDE
+GOLD: rgb(172, 140, 71);
+WHITE: #e2e2e2;
+GREY: rgb(128,128,128);
+BLACK: rgb(15,15,15)
+       rgba(15,15,15, 0.74)
+
+------------------------------------------------------------------ */
+
+
+/* ------------------------------------------------------------------
+                           GLOBAL STYLES
+------------------------------------------------------------------ */
+
+
+
 body {
   font-size: 19px;
   font-family: "alegreya", calibri, candara, "segoe UI", Optima, Arial, sans-serif;
@@ -33,4 +50,8 @@ p {
   line-height: 1.4211em;
   margin-top: 1.4211em;
   margin-bottom: 0;
+}
+
+img {
+  width: 100%;
 }
