--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,13 @@ body {
   background-image: url(../images/background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  padding: 2% 6% 6% 6%;
+}
+
+.container {
+  background: rgb(15, 15, 15); /* IE8 */
+  background: rgba(15, 15, 15, 0.74);
+  padding: 30px;
 }
 
 h1, h2, h3 {
