--- a/styles/main.css
+++ b/styles/main.css
@@ -81,6 +81,20 @@ a:link {
   a:active {
     color: rgb(252, 217, 142);
   }
+/* ------------------------------------------------------------------
+                           LOGO STYLES
+------------------------------------------------------------------ */
+
+.logo {
+  display: block;
+  margin: 0 auto;
+  width: 150px;
+}
+
+  .logo img {
+    width: 150px;
+  }
+
 
 /* ------------------------------------------------------------------
                            GLOBAL FOOTER STYLES
