--- a/styles/main.css
+++ b/styles/main.css
@@ -32,6 +32,7 @@ body {
 
 h1, h2, h3 {
   font-family: "alegreya sc", Garamond, "Baskerville Old Face", "Times New Roman", serif;
+  font-weight: normal;
 }
 
 h1 {
@@ -39,6 +40,7 @@ h1 {
   line-height: 1.2656em;
   margin-top: 0.4219em;
   margin-bottom: 0;
+  color: rgb(172, 140, 71);
 }
 
 h2 {
@@ -125,11 +127,29 @@ a:link {
   .main-navigation a:hover {
     color: rgb(255, 255, 255);
     transition: .5s color;
+    background: rgba(62, 61, 61, 0.51);
   }
 
   .main-navigation a:active {
     color: rgb(172, 140, 71);
   }
+
+/* ------------------------------------------------------------------
+                           HOME PAGE STYLES
+------------------------------------------------------------------ */
+
+.featured-info h3 {
+  border-bottom: 1px solid rgb(128, 128, 128);
+}
+
+.featured-info p {
+  font-style: italic;
+}
+
+.featured-info ul {
+  list-style: none;
+  padding-left: 0;
+}
 
 /* ------------------------------------------------------------------
                            GLOBAL FOOTER STYLES
