--- a/styles/main.css
+++ b/styles/main.css
@@ -172,6 +172,13 @@ a:link {
     color: rgb(172, 140, 71);
   }
 
+@media screen and (min-width: 750px) {
+  
+  .main-navigation a:visited {
+    color: red;
+  }
+  
+}/* media query for */
 /* ------------------------------------------------------------------
                            MENU PAGE STYLES
 ------------------------------------------------------------------ */
