--- a/styles/main.css
+++ b/styles/main.css
@@ -174,11 +174,42 @@ a:link {
 
 @media screen and (min-width: 750px) {
   
-  .main-navigation a:visited {
-    color: red;
+  .main-navigation {
+    min-height: 100px;
+    border-top: 1px solid rgb(36,36,36);
+    border-bottom: 1px solid rgb(36,36,36);
   }
   
-}/* media query for */
+  .main-navigation ul {
+    max-width: 950px;
+    margin: 0 auto;
+  }
+  
+    .main-navigation li {
+      float: left;
+      margin-left: 20px;
+      width: 28%;
+    }
+  
+    .main-navigation a {
+      background: none;
+    }
+  
+    .main-navigation a:hover {
+      background: none;
+    }
+  
+}/* media query for 750px*/
+
+@media screen and (min-width: 880px) {
+  
+  .main-navigation ul {
+    position: relative;
+    right: -30px;
+  }
+  
+}/* media query for 880px */
+
 /* ------------------------------------------------------------------
                            MENU PAGE STYLES
 ------------------------------------------------------------------ */
