--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,12 @@ body {
   padding: 2% 6% 6% 6%;
 }
 
+@media screen and (min-width: 750px) {
+  body {
+    font-size: 1.4em;
+  }
+}
+
 .container {
   background: rgb(15, 15, 15); /* IE8 */
   background: rgba(15, 15, 15, 0.74);
@@ -62,6 +68,7 @@ p {
   line-height: 1.4211em;
   margin-top: 1.4211em;
   margin-bottom: 0;
+  font-weight: 100;
 }
 
 img {
@@ -119,6 +126,14 @@ a:link {
 
 .gallery {
   margin-top: 30px;  
+}
+
+@media screen and (min-width: 750px) {
+  
+  .landing {
+    text-align: center;
+  }
+  
 }
 
 /* ------------------------------------------------------------------
